Ticket #124: Logo redirect to space index

--- a/src/e_cidadania/apps/news/templates/news/news_list.html
+++ b/src/e_cidadania/apps/news/templates/news/news_list.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans "News list" %}{% endblock %}
 {% block logo %}
     {% if get_place %}
-        <img src="{{ MEDIA_URL }}/{{ get_place.logo }}">
+        <a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}"></a>
     {% else %}
         <a href="/"><img src="{{ STATIC_URL }}/assets/logos/index.png"/></a>
     {% endif %}
