--- a/src/e_cidadania/apps/news/templates/news/post_confirm_delete.html
+++ b/src/e_cidadania/apps/news/templates/news/post_confirm_delete.html
@@ -5,7 +5,7 @@
 
 {% block logo %}
     {% if get_place %}
-        <img src="{{ MEDIA_URL }}/{{ get_place.logo }}">
+        <a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}"></a>
     {% else %}
         <a href="/"><img src="{{ STATIC_URL }}/assets/logos/index.png"/></a>
     {% endif %}
