Fixed img ending tag

--- a/src/e_cidadania/apps/debate/templates/debate/debate_add.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_add.html
@@ -2,8 +2,8 @@
 {% load i18n %}
 
 {% block title %}{% trans "Create new debate" %}{% endblock %}
-{% block logo %}<a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}"></a>{% endblock %}
-{% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
+{% block logo %}<a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>{% endblock %}
+{% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}" />{% endblock %}
 
 {% block content %}
 
