--- a/src/e_cidadania/apps/news/templates/news/post_confirm_delete.html
+++ b/src/e_cidadania/apps/news/templates/news/post_confirm_delete.html
@@ -5,17 +5,17 @@
 
 {% block logo %}
     {% if get_place %}
-        <a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}"></a>
+        <a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>
     {% else %}
-        <a href="/"><img src="{{ STATIC_URL }}/assets/logos/index.png"/></a>
+        <a href="/"><img src="{{ STATIC_URL }}/assets/logos/index.png" /></a>
     {% endif %}
 {% endblock %}
 
 {% block banner %}
     {% if get_place %}
-        <img src="{{ MEDIA_URL }}/{{ get_place.banner }}">
+        <img src="{{ MEDIA_URL }}/{{ get_place.banner }}" />
     {% else %}
-        <img src="{{ STATIC_URL }}/assets/banners/index.png"/>
+        <img src="{{ STATIC_URL }}/assets/banners/index.png" />
     {% endif %}
 {% endblock %}
 
