--- a/src/e_cidadania/apps/spaces/templates/spaces/document_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/document_add.html
@@ -16,23 +16,43 @@
       
             <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
       
-                {{ form.non_field_errors }}
+                {% if form.non_field_errors %}
+                    <ol>
+                        {% for error in form.non_field_errors %}
+                            <li class="clearfix error"><strong>{{ error|escape }}</strong></li>
+                        {% endfor %}
+                    </ol>
+                {% endif %}
                 
-                <div class="clearfix"> 
-                    {{ form.title.errors }}
+                <div class="clearfix {% if form.title.errors %}error{% endif%}"> 
                     <label for="prependedInput">{{ form.title.label }}</label> 
                     <div class="input"> 
                         {{ form.title }}
-                        <span class="help-inline">{{ form.title.help_text }}</span>
+                        <span class="help-inline">
+                            {% if form.title.errors %}
+                                {% for error in form.title.errors %}
+                                    {{ error|escape }}
+                                {% endfor %}
+                            {% else %}
+                                {{ form.title.help_text }}
+                            {% endif %}
+                        </span>
                     </div> 
                 </div>
                 
-                <div class="clearfix"> 
-                    {{ form.docfile.errors }}
+                <div class="clearfix {% if form.docfile.errors %}error{% endif%}"> 
                     <label for="prependedInput">{{ form.docfile.label }}</label> 
                     <div class="input"> 
                         {{ form.docfile }}
-                        <span class="help-inline">{{ form.docfile.help_text }}</span>
+                        <span class="help-inline">
+                            {% if form.docfile.errors %}
+                                {% for error in form.docfile.errors %}
+                                    {{ error|escape }}
+                                {% endfor %}
+                            {% else %}
+                                {{ form.docfile.help_text }}
+                            {% endif %}
+                        </span>
                     </div> 
                 </div>
         
